third_party/move/move-compiler-v2/tests/more-v1/translated_ir_tests/move/commands/while_move_local.exp

Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/more-v1/translated_ir_tests/move/commands/while_move_local.move:7:13
  │
7 │         y = move x;
  │             ^^^^^^
  │             │
  │             attempted to move here
  │             used here
